--- a/mustapha garba.html
+++ b/mustapha garba.html
@@ -14,12 +14,12 @@
    <ul>
        <li><strong>cameroon</strong>
 
-           <img src="images/cameroon.png"alt= "cameroonflag">
+           <img src="cameroon.png"alt= "cameroonflag">
        </li>
 
 
        <li><strong>analyst</strong>
-           <img src="images/analyst.jfif" alt="icon"analyst>
+           <img src="analyst.jfif" alt="icon"analyst>
         </li>
    </ul>
    <ol>
